--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+	/**************/
+	/* Main stuff */
+	/**************/
 html, body {
 	width: 100%;
 	overflow-x: hidden;
@@ -15,7 +18,6 @@ html, body {
 	src: url(../bin/HelveticaNeue-UltraLight.otf);
 }
 
-
 * {
 	font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 100;
@@ -29,6 +31,21 @@ h2 {
 	font-size: 1.5em;
 }
 
+	span.sub {
+		font-size: 20px;
+	}
+
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	color: #FF0000;
+}
+
+	/*************/
+	/* Masthead */
+	/************/
 #mainTitle {
 	font-size: 4em;
 	line-height: 1;
@@ -39,6 +56,9 @@ h2 {
 	position: absolute;
 }
 
+	/**************/
+	/* Navigation */
+	/**************/
 #mainNavigation {
 	width: 100%;
 	border-collapse: collapse;
@@ -82,6 +102,23 @@ h2 {
 	background-color: blue;
 }
 
+	/*************/
+	/* Portfolio */
+	/*************/
+#mainScreen {
+	border-bottom: 1px solid black;
+	background-color: hsla(360, 50%, 50%, 0.5);
+}
+
+#mainScreen iframe {
+	width: 80%;
+	margin: 0 10%;
+}
+
+#mainScreen p {
+	margin: 1em 10%;
+}
+
 .section {
 	display: none;
 }
@@ -93,18 +130,9 @@ h2 {
 	overflow: hidden;
 }
 
-span.sub {
-	font-size: 20px;
-}
-
 #portfolio img {
 	width: 100%;
+	height: 100%;
 }
 
-a {
-	text-decoration: none;
-}
 
-a:visited {
-	color: #FF0000;
-}
