--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,116 @@
-	/**************/
-	/* Main stuff */
-	/**************/
-html, body {
-	width: 100%;
-	overflow-x: hidden;
-	font-size: 1.2em;
-	margin: 0;
-}
+/**************/
+/* Main stuff */
+/**************/
+	html, body {
+		width: 100%;
+		overflow-x: hidden;
+		font-size: 1.2em;
+		margin: 0;
+	}
 
-@font-face {
-	font-family: myFranny;
-	src: url(../bin/FranckLloydExtra-Regular.otf);
-}
+	@font-face {
+		font-family: myFranny;
+		src: url(../bin/FranckLloydExtra-Regular.otf);
+	}
 
-@font-face {
-	font-family: helveticy;
-	src: url(../bin/HelveticaNeue-UltraLight.otf);
-}
+	@font-face {
+		font-family: helveticy;
+		src: url(../bin/HelveticaNeue-UltraLight.otf);
+	}
 
-* {
-	font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-weight: 100;
-}
+	* {
+		font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+		font-weight: 100;
+	}
 
-strong {
-	font-weight: 200;
-}
+	strong {
+		font-weight: 200;
+	}
 
-h2 {
-	font-size: 1.5em;
-}
+	h2 {
+		font-size: 1.5em;
+	}
 
 	span.sub {
 		font-size: 20px;
 	}
 
-a {
-	text-decoration: none;
-}
+	a {
+		text-decoration: none;
+	}
 
-a:visited {
-	color: #FF0000;
-}
+	a:visited {
+		color: #FF0000;
+	}
 
-	/*************/
-	/* Masthead */
-	/************/
-#mainTitle {
-	font-size: 4em;
-	line-height: 1;
-	font-family: myFranny;
-}
+/*************/
+/* Masthead */
+/************/
+	#mainTitle {
+		font-size: 4em;
+		line-height: 1;
+		font-family: myFranny;
+	}
 
-#gifLogo {
-	position: absolute;
-}
+	#gifLogo {
+		position: absolute;
+	}
 
-	/**************/
-	/* Navigation */
-	/**************/
-#mainNavigation {
-	width: 100%;
-	border-collapse: collapse;
-}
+/**************/
+/* Navigation */
+/**************/
+	#mainNavigation {
+		width: 100%;
+		border-collapse: collapse;
+	}
 
-#mainNavigation div {
-    position: absolute;
-    /*visibility: hidden;*/
-    height: auto;
-    width: auto;
-    white-space: nowrap; /* Thanks to Herb Caudill comment */
-    cursor: pointer;
-}
-/*
-#mainNavigation div.selected {
-	color: yellow;
-}*/
+	#mainNavigation div {
+	    position: absolute;
+	    /*visibility: hidden;*/
+	    height: auto;
+	    width: auto;
+	    white-space: nowrap; /* Thanks to Herb Caudill comment */
+	    cursor: pointer;
+	}
 
-#mainNavigation td {
-	text-align: center;
-	width: 33%;
-}
+	#mainNavigation h2 {
+		margin: 0.5em 0;
+		-webkit-touch-callout: none;
+	    -webkit-user-select: none;
+	    -khtml-user-select: none;
+	    -moz-user-select: none;
+	    -ms-user-select: none;
+	    user-select: none;
+	}
+	/*
+	#mainNavigation div.selected {
+		color: yellow;
+	}*/
 
-#underline {
-	position: relative;
-	height: 30px;
-}
+	#mainNavigation td {
+		text-align: center;
+		width: 33%;
+	}
 
-#underline #line{
-	position: relative;
-	top: 5px;
-	height: 1px;
-	background-color: black;
-	z-index: -1;
-}
+	#underline {
+		position: relative;
+		height: 1em;
+		z-index: 1;
+	}
 
-#underline .highlight {
-	position: absolute;
-	height: 10px;
-	opacity: 0.2;
-	background-color: blue;
-}
+	#underline #line{
+		position: relative;
+		top: 10px;
+		height: 1px;
+		background-color: black;
+		z-index: -1;
+	}
+
+	#underline .highlight {
+		position: absolute;
+		height: 1em;
+		opacity: 0.2;
+	}
 
 /*************/
 /* Portfolio */
@@ -111,11 +121,10 @@ a:visited {
 		#mainScreen {
 			/*border-top: 1px solid black;*/
 			border-bottom: 1px solid black;
-			/*background-color: hsla(360, 50%, 50%, 0.5);*/
+			background: radial-gradient(ellipse at center, #c9c9c9 0%,#ffffff 98%);
 			position: relative;
 			display: none;
-			top: -1em;
-			z-index: 1;
+			top: -0.5em;
 		}
 
 		#mainScreen iframe {
@@ -137,6 +146,7 @@ a:visited {
 			height: 50px;
 			width: 50px;
 			cursor: pointer;
+			z-index: 4;
 		}
 	/**************/
 
