--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,8 @@
 		height: 1px;
 		background-color: black;
 		z-index: -1;
+		width: 95%;
+		margin-left: 2.5%;
 	}
 
 	#underline .highlight {
@@ -131,6 +133,7 @@
 		#mainScreen {
 			/*border-top: 1px solid black;*/
 			border-bottom: 1px solid black;
+			margin: 0 2.5%;
 			background: radial-gradient(ellipse at center, #c9c9c9 0%,#ffffff 98%);
 			position: relative;
 			display: none;
@@ -138,13 +141,13 @@
 		}
 
 		#mainScreen iframe {
-			width: 60%;
-			margin: 1em 20% 0 20%;
+			/*width: 80%;*/
+			margin: 1em 12.5% 0 12.5%;
 			opacity: 0;
 		}
 
 		#mainScreen p {
-			margin: 1em 20%;
+			margin: 1em 12.5%;
 			opacity: 0;
 		}
 
@@ -164,18 +167,40 @@
 		display: none;
 	}
 
-	.panel div {
-		width: 500px;
-		height: 281px;
+	.panel div.portfolioEntry {
+		width: 100%;
 		display: inline-block;
 		overflow: hidden;
 		cursor: pointer;
 		position: relative;
+		vertical-align: top;
+	}
+
+	.dummy {
+		/* A weird trick to enforce a 16:9 
+		aspect ratio */
+		padding-top: 57%;
 	}
 
 	#portfolio img {
+		position: absolute;
+		margin: auto 0;
 		width: 100%;
 		height: 100%;
+	}
+
+	.panel {
+		margin: 0;
+		width: 45%;
+		display: inline-block;
+	}
+
+	.panel#interaction {
+		margin-left: 5%;
+	}
+
+	.panel#webdesign h2 {
+		/*text-align: right;*/
 	}
 
 	.panel div p {
@@ -188,4 +213,31 @@
 		background: hsla(240, 5%, 15%, 0.2);
 	}
 
+/*************/
+/*    CV    */
+/*************/
+	#cv {
+		margin: 0 5%;
+	}
 
+/*************/
+/* contact   */
+/*************/
+	#contact {
+		margin: 0 5%;
+	}
+
+/*************/
+/* footer   */
+/*************/
+	#footer {
+		margin: 2em 2.5% 0 2.5%;
+		color: hsl(0, 0%, 63%);
+		border-top: 1px solid;
+		text-align: right;
+		font-size: 0.8em;
+	}
+
+	#footer p {
+		margin: 0;
+	}
