--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 	}
 
 	* {
-		font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+		font-family: helveticy, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 		font-weight: 100;
 	}
 
@@ -34,7 +34,7 @@
 	}
 
 	span.sub {
-		font-size: 20px;
+		font-size: 22px;
 	}
 
 	a {
@@ -231,6 +231,7 @@
 /*************/
 	#cv {
 		margin: 0 5%;
+		letter-spacing: 1px;
 	}
 
 /*************/
